@@ -1,3 +1,4 @@
+	- add support to predicate #11
 	- add support to handle more than one attribute #2
 
 0.0.2 - 2014-01-31
